[tool.poetry]
name = "cpa-tools"
version = "0.8.1"
description = "Compositional Perturbation Autoencoder (CPA)"
authors = ["Mohsen Naghipourfar <naghipourfar@berkeley.edu>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "cpa"},
]

[tool.poetry.dependencies]
python = "^3.9"
scipy = "*"
scvi-tools = ">=0.20.3,<1.0.0"
importlib-metadata = "*"
scanpy = "*"
rdkit-pypi = "*"
torch = { version = ">1.8.0,<2.0.0" }
adjustText = "*"

# Optional dependencies
pytest = "*"
pytest-cov = "*"
black = "*"
flake8 = "*"
jupyter = "*"
nbformat = "*"
nbconvert = "*"
sphinx = "*"
scanpydoc = "*"
nbsphinx = "*"
nbsphinx-link = "*"
ipython = "*"
toml = "*"
pydata-sphinx-theme = "*"
typing_extensions = "*"
sphinx-autodoc-typehints = "*"
sphinx_gallery = "*"
sphinx-rtd-theme = "*"


[tool.poetry.extras]
docs = ["scanpy", "sphinx", "scipy", "scanpydoc", "nbsphinx", "nbsphinx-link", "ipython", "toml", "pydata-sphinx-theme", "typing_extensions", "sphinx-autodoc-typehints", "sphinx_gallery", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
