[tool.poetry]
name = "cpa-tools"
version = "0.8.8"
description = "Compositional Perturbation Autoencoder (CPA)"
authors = ["Mohsen Naghipourfar <naghipourfar@berkeley.edu>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "cpa"},
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
llvmlite = "^0.41"
anndata = ">=0.9.0, <0.10.0"
scipy = ">=1.12.0, <1.13.0"
scvi-tools = ">=0.20.3,<1.0.0"
importlib-metadata = "*"
scanpy = "*"
rdkit-pypi = "*"
torch = { version = ">1.8.0,<=2.0.1" }
adjustText = "*"
numpy = '>=1.22.4,<1.24'
seaborn = "*"
gdown = "*"
jax = ">=0.4.16, <0.4.24"
jaxlib = ">=0.4.16, <0.4.24"
torchaudio = ">2.0.0,<=2.0.1"
lightning = ">=2.2.0, <2.3.0"
ray = { version = ">=2.9.0, <2.10.0", extras = ["data", "train", "tune", "serve"] }
setuptools = ">=70.0.0, <70.1.0"

# Optional dependencies
pytest = "*"
pytest-cov = "*"
black = "*"
flake8 = "*"
jupyter = "*"
nbformat = "*"
nbconvert = "*"
sphinx = "*"
scanpydoc = "*"
nbsphinx = "*"
nbsphinx-link = "*"
ipython = "*"
toml = "*"
pydata-sphinx-theme = "*"
typing_extensions = "*"
sphinx-autodoc-typehints = "*"
sphinx_gallery = "*"
sphinx-rtd-theme = "*"


[tool.poetry.extras]
docs = ["sphinx", "scanpydoc", "nbsphinx", "nbsphinx-link", "ipython", "toml", "pydata-sphinx-theme", "typing_extensions", "sphinx-autodoc-typehints", "sphinx_gallery", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
